# Lattice-Transfer-Protocol

./: CODE_IMPROVEMENTS.md  LICENSE  LICENSE-SPEC  README.md  pyproject.toml
benchmarks/ltp-bench/: Cargo.toml  benchmark_results.md
benchmarks/ltp-bench/src/: main.rs
docs/: DEPLOYMENT_GUIDE.md  LTP_Whitepaper_Formal_Review.docx  LTP_Whitepaper_Formal_Review.md  PRODUCTION_PLAN.md  SECURITY_REVIEW-2-24-2026.md  WHITEPAPER.md
docs/design-decisions/Reviews/001/: 001-Mathematical-Review.docx  001-Mathematical-Review.md
src/: ltp.py
src/ltp/: __init__.py  __main__.py  commitment.py  erasure.py  keypair.py  primitives.py  protocol.py  shards.py
tests/: test_primitives.py
