[package]
name = "ltp-bench"
version = "0.1.0"
edition = "2021"
description = "Production-grade Rust benchmarks for the Lattice Transfer Protocol"
authors = ["Jas Strokus"]

[[bin]]
name = "ltp-bench"
path = "src/main.rs"

[dependencies]
# BLAKE3-256 — content addressing (Layer 2)
blake3 = "1"

# ChaCha20-Poly1305 AEAD — shard encryption (Layer 4)
chacha20poly1305 = "0.10"

# Reed-Solomon erasure coding over GF(256) — information-theoretic security (Layer 1)
reed-solomon-erasure = "6"

# ML-KEM-768 (FIPS 203) — post-quantum key encapsulation (Layer 5)
ml-kem = { version = "0.3.0-rc.1", features = ["getrandom"] }

# ML-DSA-65 (FIPS 204) — post-quantum signatures (Layer 2)
fips204 = "0.4"

# RNG
rand = "0.8"
rand_core = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
